fixed the icons not showing up

--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ html, body {
     transform: rotate(360deg);
 }
 
-.rounded-social-buttons .fa-twitter, .fa-facebook-f, .fa-linkedin, .fa-tiktok, .fa-youtube, .fa-instagram {
+.rounded-social-buttons .fa-facebook-f, .fa-linkedin, .fa-instagram {
     font-size: 25px;
 }
 
@@ -125,16 +125,6 @@ html, body {
     border-color: #3b5998;
 }
 
-.rounded-social-buttons .social-button.twitter {
-    background: #55acee;
-}
-
-.rounded-social-buttons .social-button.twitter:hover, .rounded-social-buttons .social-button.twitter:focus {
-    color: #55acee;
-    background: #fefefe;
-    border-color: #55acee;
-}
-
 .rounded-social-buttons .social-button.linkedin {
     background: #007bb5;
 }
@@ -145,25 +135,6 @@ html, body {
     border-color: #007bb5;
 }
 
-.rounded-social-buttons .social-button.tiktok {
-    background: #000000;
-}
-
-.rounded-social-buttons .social-button.tiktok:hover, .rounded-social-buttons .social-button.tiktok:focus {
-    color: #000000;
-    background: #fefefe;
-    border-color: #000000;
-}
-
-.rounded-social-buttons .social-button.youtube {
-    background: #bb0000;
-}
-
-.rounded-social-buttons .social-button.youtube:hover, .rounded-social-buttons .social-button.youtube:focus {
-    color: #bb0000;
-    background: #fefefe;
-    border-color: #bb0000;
-}
 
 .rounded-social-buttons .social-button.instagram {
     background: #125688;
